--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Web.config
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Web.config
@@ -38,4 +38,19 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="HCServiceSoap">
+          <security mode="Transport" />
+        </binding>
+        <binding name="HCServiceSoap1" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="https://hc.mercurydev.net/hcws/hcservice.asmx"
+        binding="basicHttpBinding" bindingConfiguration="HCServiceSoap"
+        contract="HCService.HCServiceSoap" name="HCServiceSoap" />
+    </client>
+  </system.serviceModel>
 </configuration>
