--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp.csproj
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp.csproj
@@ -131,6 +131,8 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\custom.css" />
+    <Content Include="Content\pos.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
