UI added for use case (2)

--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp.csproj
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp.csproj
@@ -133,6 +133,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\custom.css" />
     <Content Include="Content\img\acme.png" />
+    <Content Include="Content\img\henry.png" />
     <Content Include="Content\pos.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
