--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp.csproj
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp.csproj
@@ -134,6 +134,7 @@
     <Content Include="Content\custom.css" />
     <Content Include="Content\img\acme.png" />
     <Content Include="Content\img\henry.png" />
+    <Content Include="Content\img\two.png" />
     <Content Include="Content\pos.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
