--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp.csproj
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp.csproj
@@ -133,7 +133,9 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\custom.css" />
     <Content Include="Content\img\acme.png" />
+    <Content Include="Content\img\background.png" />
     <Content Include="Content\img\henry.png" />
+    <Content Include="Content\img\logo.jpg" />
     <Content Include="Content\img\two.png" />
     <Content Include="Content\pos.css" />
     <Content Include="favicon.ico" />
