--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp.csproj
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp.csproj
@@ -132,11 +132,9 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\custom.css" />
-    <Content Include="Content\img\acme.png" />
     <Content Include="Content\img\background.png" />
     <Content Include="Content\img\henry.png" />
-    <Content Include="Content\img\logo.jpg" />
-    <Content Include="Content\img\two.png" />
+    <Content Include="Content\img\vantiv-pro-shop-logo.png" />
     <Content Include="Content\pos.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
