--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp.csproj
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp.csproj
@@ -134,6 +134,8 @@
     <Content Include="Content\custom.css" />
     <Content Include="Content\img\background.JPG" />
     <Content Include="Content\img\background.png" />
+    <Content Include="Content\img\ball-tee-300.png" />
+    <Content Include="Content\img\golf-tee.png" />
     <Content Include="Content\img\henry.png" />
     <Content Include="Content\img\vantiv-pro-shop-logo.png" />
     <Content Include="Content\pos.css" />
