--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Web.config
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Web.config
@@ -34,7 +34,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -48,9 +48,7 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="https://hc.mercurydev.net/hcws/hcservice.asmx"
-        binding="basicHttpBinding" bindingConfiguration="HCServiceSoap"
-        contract="HCService.HCServiceSoap" name="HCServiceSoap" />
+      <endpoint address="https://hc.mercurydev.net/hcws/hcservice.asmx" binding="basicHttpBinding" bindingConfiguration="HCServiceSoap" contract="HCService.HCServiceSoap" name="HCServiceSoap" />
     </client>
   </system.serviceModel>
 </configuration>
