--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Web.config
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Web.config
@@ -48,7 +48,7 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="https://hc.mercurydev.net/hcws/hcservice.asmx" binding="basicHttpBinding" bindingConfiguration="HCServiceSoap" contract="HCService.HCServiceSoap" name="HCServiceSoap" />
+      <endpoint address="https://hc.mercurycert.net/hcws/hcservice.asmx" binding="basicHttpBinding" bindingConfiguration="HCServiceSoap" contract="HCService.HCServiceSoap" name="HCServiceSoap" />
     </client>
   </system.serviceModel>
 </configuration>
